fixed flex wrap at clients section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1526,7 +1526,7 @@ body.lock {
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    @media screen and(max-width:768px) {
+    @media screen and(max-width:1230px) {
       flex-wrap: wrap;
       justify-content: center;
     }
